# KriNein

./: .env.example  .gitignore  LICENSE  README.md  aggregate.py  analyze_bot.py  compare_report.md  download_log.txt  download_progress.json  eval_bench_gt.py  eval_bench_output.txt  eval_gt.py  eval_new_output.txt  main.py  output.txt  pyproject.toml  summarize_10.py  update.md  usages.md
ablation_results/: ablation_metrics.json
benchmark/: gemini.md  run_benchmark.py  run_hib_vs_static.py
benchmark_results/benchmark/: benchmark_results.csv  benchmark_results.json
benchmarks/: __init__.py  base.py  extraction_wrapper.py  metrics.py  plan.md  runner.py
benchmarks/methods/: __init__.py  histogram.py  kmeans.py  optical_flow.py  orb.py  pipeline_variants.py  random_sampling.py  uniform.py
compare/: compare_results.py
config/: benchmark.yaml  default.yaml
data/: download.py
examples/: basic_usage.py  batch_processing.py  custom_config.py
examples/notebooks/: evaluation.ipynb  result_analysis.ipynb
experiments/: pipeline.py  run_30fps.py  run_benchmark.py  updated_pipeline.py
experiments/efficiency/: baseline_whole.py  baselines.py  hmmd.py
experiments/results/: 0tteHhYh9rU.json  9ypxRGSrS-k.json  _wZSB0b9OCA.json  eEgMjH9bVgQ.json  v0004.json  v0017.json  v0020.json
results/: progress.json  removed_videos.csv  removed_videos_detailed.csv
results/benchmark/: benchmark_results.csv  benchmark_results.json
results/new/: first10_results.json  progress.json
src/: pipeline.py
src/deduplication/: phash.py  ssim.py
src/detection/: change_detector.py  ocr_extractor.py  readme.md  update.md  visual_features.py
src/extraction/: llm_client.py  prompts.py  readme.md  update.md
src/ingestion/: readme.md  update.md
src/selection/: readme.md  representative.py  update.md
src/utils/: README.md  update.md
src/video_analyzer/: __init__.py  __main__.py  cli.py
src/video_analyzer/deduplication/: README.md
src/video_analyzer/detection/: README.md
src/video_analyzer/extraction/: README.md
src/video_analyzer/ingestion/: README.md  audio_extractor.py
src/video_analyzer/selection/: README.md  clustering.py  representative.py
src/video_analyzer/utils/: README.md  frame_store.py
tests/: phash.py  run_quick_tests.py  test_audio_extractor.py  test_improvements.py  test_isd_budget.py  test_llm_client.py  test_video_analyzer.py
